# scdar-lab

./: .eslintrc.json  .gitignore  LICENSE  next.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: gh-pages.yml  nextjs.yml
notes/: convert_orig.ipynb
pages/: index.tsx
public/data/: reg_list.json  sched.json
