[tool.poetry]
name = "scdar-lab"
version = "0.1.0"
description = ""
authors = ["yamachi"]
license = "MIT"
readme = "README.md"
packages = [{include = "scdar_lab"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.21.3"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
requests = "^2.28.2"
openpyxl = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
